# pyQUEST

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  pyproject.toml  requirements.txt  run_lint.sh  run_unit_tests.sh  setup.cfg
src/pyquest/: __init__.py  app_info.py  counting.py  errors.py  library.py  main.py  stats.py  utils.py  writer.py
src/pyquest/readers/: __init__.py  constants.py  fq.py  hts.py  main.py  read_file_info.py  read_info.py  read_qc.py
tests/: test_library.py  test_read_qc.py  test_readers.py
