[options]
packages = find:

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    pyquest = pyquest.main:main

[metadata]
version = attr: pyquest.__version__
author = Luca Barbon
classifiers =
    Programming Language :: Python :: 3 :: Only
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
